force-app/main/default/objects/b3o__Placement__c/b3o__Placement__c.object-meta.xml
<CustomObject>
    <label>3B Placement</label>
    <nameField>
        <displayFormat>PLC-{YYYY}{MM}-{0}</displayFormat>
        <label>Placement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3B Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>