force-app/main/default/objects/b3o__Placement__c/fields/b3_Site__c.field-meta.xml
<CustomField>
    <fullName>b3_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>b3o__Site__c</referenceTo>
    <relationshipLabel>3B Placements</relationshipLabel>
    <relationshipName>X3B_Placements</relationshipName>
    <type>Lookup</type>
</CustomField>