force-app/main/default/objects/b3o__Placement__c/fields/b3o__Candidate__c.field-meta.xml
<CustomField>
    <fullName>b3o__Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Placements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>